2018-09-07 Alexander Malysh <amalysh @ kannnel.org>
   * gw/smsc/smsc_http.c, gw/smsc/smsc_http_p.h, gw/smsc/http/*.c: moved kannel
     callbacks to gw/smsc/http/kannel.c. Added gw/smsc/http/*.c to Makefile.am
     and use new gw_dlopen_get_symbol to get callback symbols.

2018-09-07 Alexander Malysh <amalysh @ kannnel.org>
   * gwlib/gw-dlopen.[ch]: added simple dlopen lookup functionality.

2018-09-07  Stipe Tolj  <stolj at kannel.org>
   * configure.in: removing own binary suffix handling, automake provides an own
     construct for this.
     [https://www.gnu.org/software/automake/manual/automake.html#Renaming]
     
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * test/test_http.c: fix compiler warnings. NLC.
   
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * test/fakewap.c: cast panic() output to fix compiler warning on 64bit.
  
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * doc/doxygen/kannel.conf: re-tag the config with the current svn snapshot 
     revision number.
     
2018-08-30  Stipe Tolj  <stolj at kannel.org>
   * test/test_dbpool.c: fix compiler warning/error in case we compile without
     any DB support. NLC.
     
2018-08-28  Stipe Tolj  <stolj at kannel.org>
   * doc/userguide/userguide.xml: fixed 'window' value type for GSMA OneAPI.
     Thanks to Franck Lamasuta for this patch.

2018-08-20 Alexander Malysh <amalysh @ kannnel.org>
   * switched wmlscript to automake.

2018-08-20 Alexander Malysh <amalysh @ kannnel.org>
   * wmlscript/wsgram.[chy], wmlscript/wsint.h, wmlscript/wslexer.c: Applied patch that
     fixes build issues with bison. This fixes #699 .
     Thanks to Rici Lake for this patch.

2018-08-12 Alexander Malysh <amalysh @ kannnel.org>
   * gwlib/octstr.c: applied patch that fixes octstr_shrink_blanks.
     Thanks to Werner Coetzee for this patch.

2018-06-19  Stipe Tolj  <stolj at kannel.org>
    * Making stable release 1.4.5.

2018-06-19  Stipe Tolj  <stolj at kannel.org>